# winnin-papers-agent

./: .dockerignore  .env.example  .gitattributes  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
scripts/: ingest.py  run_questions.py
src/papers_agent/: __init__.py  main.py
src/papers_agent/agents/: __init__.py  analyst_agent.py  orchestrator.py  orchestrator_prompts.py  rag_agent.py
src/papers_agent/api/: __init__.py  dependencies.py  routes.py  schemas.py
src/papers_agent/core/: __init__.py  catalog.py  config.py  logging.py  models.py  ports.py
src/papers_agent/infra/: __init__.py  chroma_client.py  db.py  gemini_client.py  pdf_parser.py  repository.py
src/papers_agent/tools/: __init__.py  base.py  compare_papers.py  extract_section.py  rank_papers.py  search_documents.py  summarize.py
tests/: conftest.py  test_architecture.py
tests/integration/: __init__.py  test_orchestration_flow.py
tests/unit/: test_analyst_agent.py  test_compare_papers.py  test_extract_section.py  test_rag_agent.py  test_rank_papers.py  test_repository.py  test_routes.py  test_search_documents.py  test_summarize.py
